# statarb

./: .gitignore
cold-path-intelligence/: README.md  docker-compose.yml  pipeline_runner.py  pyproject.toml  run_shm_test.py
cold-path-intelligence/src/data_ingestion/: historical_sync.py  questdb_client.py
cold-path-intelligence/src/discovery/: clustering.py  cointegration.py  pipeline.py
cold-path-intelligence/src/ipc/: shm_writer.py
cold-path-intelligence/src/ipc/statarb/ipc/: RiskState.py  Signal.py
cold-path-intelligence/src/risk_modeling/: kalman_filter.py  z_score.py
hot-path-execution/: Cargo.toml
hot-path-execution/src/: main.rs
hot-path-execution/src/config/: settings.rs
hot-path-execution/src/engine/: executor.rs  mod.rs  router.rs
hot-path-execution/src/exchange/: binance_client.rs
hot-path-execution/src/ipc/: mod.rs
hot-path-execution/src/network/: binance.rs  mod.rs  websocket.rs
hot-path-execution/src/portfolio/: manager.rs  mod.rs  position.rs
hot-path-execution/src/state/: mod.rs  orderbook.rs  shm_reader.rs
hot-path-execution/src/telemetry/: metrics.rs  mod.rs
hot-path-execution/src/types/: models.rs
infrastructure/: docker-compose.yml  prometheus.yml
shared-memory-bridge/: compile_schemas.sh
shared-memory-bridge/schemas/: risk_matrix.fbs
