[project]
name = "cold-path-intelligence"
version = "0.1.0"
description = "Market-Neutral Statistical Arbitrage Cold-Path Intelligence"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "polars>=0.20.0",
    "questdb>=3.1.1",
    "adbc-driver-postgresql>=1.0.0",
    "adbc-driver-manager>=1.0.0",
    "pyarrow>=15.0.0",
    "httpx>=0.27.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/data_ingestion"]
